fix scroll overflow

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -69,7 +69,6 @@ body {
     width: 70%;
     background-color: #ffffff;
     border-radius: 25px;
-    padding: 10px;
     text-align: center;
     color: white;
     height: fit-content;
@@ -87,7 +86,8 @@ body {
     padding: 5px;
     background: linear-gradient(to right, #512DA8, #673AB7);
     border-radius: 20px 20px 0 0;
-    box-shadow: 0 0 10px #00000040;
+    border: 10px solid #fff;
+    /*box-shadow: 0 0 10px #00000040;*/
 }
 
 .question h1 {
@@ -100,6 +100,7 @@ body {
     height: fit-content;
     overflow: auto;
     border-radius: 0 0 20px 20px;
+    padding: 0 10px;
 }
 
 .answer {
@@ -110,7 +111,7 @@ body {
     height: 15px;
     background-color: #512da899;
     box-shadow: 0 0 10px #00000040;
-    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 25px;
     cursor: pointer;
     transition: .25s box-shadow, .25s background-color, .5s height, .5s font-size, .5s opacity;
@@ -144,9 +145,10 @@ body {
     background-color: #43b581;
 }
 
-/*.answer:last-child {
-    border-radius: 0 0 20px 20px;
-}*/
+.answer:last-child {
+    margin-bottom: 10px;
+    /*border-radius: 0 0 20px 20px;*/
+}
 
 /* scrollbar */
 
